--- a/portfolio.html
+++ b/portfolio.html
@@ -31,60 +31,59 @@
     </div>
   </header>
 
-  <main class="page-content fade-in">
-    <section class="portfolio-section">
-      <h2 class="section-title">Meet the Developer</h2>
-      <p>
-        Hello, I’m an RT Embedded Engineer specializing in C/C++ on Linux. This platform is my advanced
-        learning and portfolio demonstration, bridging real-time embedded topics with modern C++.
-      </p>
+  <main class="page-content fade-in portfolio-section">
+    <h2 class="section-title" style="color:#fff; text-align:center;">Meet the Developer</h2>
+    <p style="max-width:800px; margin: 10px auto;">
+      Hello, I’m an RT Embedded Engineer specializing in C/C++ on Linux. This platform is my advanced learning 
+      and portfolio demonstration, bridging real-time embedded topics with modern C++ for a professional, 
+      interview-focused skill set.
+    </p>
 
-      <div class="portfolio-highlights">
-        <div class="highlight-card glass card-hover floating-card">
-          <h3>Background</h3>
-          <ul>
-            <li>B.Sc. in Computer Science</li>
-            <li>10+ years in embedded software dev</li>
-            <li>Expertise in real-time systems, OS internals</li>
-          </ul>
-        </div>
-        <div class="highlight-card glass card-hover floating-card">
-          <h3>Focus Areas</h3>
-          <ul>
-            <li>Low-level C/C++ programming</li>
-            <li>Multi-threading and concurrency</li>
-            <li>Performance tuning & memory optimization</li>
-          </ul>
-        </div>
-        <div class="highlight-card glass card-hover floating-card">
-          <h3>Project Goals</h3>
-          <ul>
-            <li>Advanced learning modules for interviews</li>
-            <li>In-browser IDE & solution checking</li>
-            <li>Showcase my professional experience & portfolio</li>
-          </ul>
-        </div>
+    <div class="portfolio-highlights" style="margin-top:30px;">
+      <div class="highlight-card glass card-hover floating-card">
+        <h3>Background</h3>
+        <ul>
+          <li>B.Sc. in Computer Science</li>
+          <li>10+ years in embedded software development</li>
+          <li>Expertise in real-time systems, OS internals</li>
+        </ul>
       </div>
+      <div class="highlight-card glass card-hover floating-card">
+        <h3>Focus Areas</h3>
+        <ul>
+          <li>Low-level C/C++ programming</li>
+          <li>Multi-threading and concurrency</li>
+          <li>Performance tuning & memory optimization</li>
+        </ul>
+      </div>
+      <div class="highlight-card glass card-hover floating-card">
+        <h3>Project Goals</h3>
+        <ul>
+          <li>Offer advanced modules for tough C++ interviews</li>
+          <li>Integrate an in-browser IDE & solution checking</li>
+          <li>Showcase my professional portfolio & background</li>
+        </ul>
+      </div>
+    </div>
 
-      <!-- Link to Resume -->
-      <div class="glass" style="margin-top:40px; text-align:center;">
-        <p>Interested in my professional background? 
-          <a href="resume.html" class="btn">View My Resume</a>
-        </p>
-      </div>
+    <!-- Resume link as an icon -->
+    <div class="glass" style="margin-top:40px; padding:20px; text-align:center;">
+      <p style="margin-bottom:10px;">Check out my detailed CV/Resume:</p>
+      <a href="resume.html" class="icon-btn" title="View Resume" style="display:inline-block;">
+        <img src="https://img.icons8.com/material-outlined/24/ffffff/resume.png" alt="Resume Icon"/>
+      </a>
+    </div>
 
-      <!-- GitHub & LinkedIn Icons/Buttons -->
-      <div class="glass" style="margin-top:20px; padding:20px; text-align:center;">
-        <h3>Connect with me</h3>
-        <a href="https://github.com/ohadonmicrosoft" target="_blank" class="btn" style="margin-right:10px;">
-          <!-- Simple text or an icon -->
-          GitHub
-        </a>
-        <a href="https://www.linkedin.com/in/ohad-alon" target="_blank" class="btn" style="margin-left:10px;">
-          LinkedIn
-        </a>
-      </div>
-    </section>
+    <!-- GitHub & LinkedIn icons -->
+    <div class="glass" style="margin-top:20px; padding:20px; text-align:center;">
+      <p>Find me on GitHub & LinkedIn:</p>
+      <a href="https://github.com/ohadonmicrosoft" target="_blank" class="icon-btn" title="GitHub">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/github.svg" alt="GitHub" style="filter: invert(100%); width:18px;"/>
+      </a>
+      <a href="https://www.linkedin.com/in/ohad-alon" target="_blank" class="icon-btn" title="LinkedIn">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/linkedin.svg" alt="LinkedIn" style="filter: invert(100%); width:18px;"/>
+      </a>
+    </div>
   </main>
 
   <footer>
