enhance progress tracking with radial display, update IDE layout, and improve styles

--- a/exercises.html
+++ b/exercises.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles/animations.css" />
 </head>
 <body>
+  <!-- Header -->
   <header class="glass header-slide-in compact-header">
     <div class="nav-container">
       <h1 class="logo">
@@ -25,62 +26,62 @@
           <li><a href="progress.html" class="nav-link">Progress</a></li>
           <li><a href="resources.html" class="nav-link">Resources</a></li>
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-          <!-- Resume link removed -->
         </ul>
       </nav>
     </div>
   </header>
 
   <main class="page-content fade-in exercise-list">
-    <h2 class="section-title">Advanced C++ Interview Syllabus</h2>
-    <p>Select a module to see detailed lessons & hands-on exercises.</p>
+    <h2 class="section-title" style="color:#fff; text-align:center; margin-bottom:10px;">Advanced C++ Interview Syllabus</h2>
+    <p style="text-align:center; max-width:800px; margin:0 auto 30px;">
+      Select a module below to see detailed lessons and tasks. Each module page includes sub-navigation and an embedded IDE link for coding solutions.
+    </p>
 
     <div class="course-module glass">
       <h3>Module 1: Foundations & Modern Features</h3>
-      <p>A refresher on modern C++ RAII, smart pointers, lambdas, etc.</p>
+      <p>RAII, smart pointers, lambdas, advanced C++11/14/17 features.</p>
       <a href="module1.html" class="btn lesson-btn">Go to Module 1</a>
     </div>
 
     <div class="course-module glass">
       <h3>Module 2: Data Structures & Algorithms</h3>
-      <p>Complexities, sorting, searching, and typical puzzle challenges.</p>
+      <p>Complexities, searching/sorting, BFS/DFS, and puzzle challenges.</p>
       <a href="module2.html" class="btn lesson-btn">Go to Module 2</a>
     </div>
 
     <div class="course-module glass">
       <h3>Module 3: Real-Time & Embedded</h3>
-      <p>RTOS, concurrency, interrupts, hardware interaction.</p>
+      <p>RTOS, concurrency in embedded, interrupts, hardware debugging.</p>
       <a href="module3.html" class="btn lesson-btn">Go to Module 3</a>
     </div>
 
     <div class="course-module glass">
       <h3>Module 4: Concurrency & Multithreading</h3>
-      <p>Threads, mutexes, lock-free data structures, advanced concurrency.</p>
+      <p>Threads, mutexes, lock-free data structures, advanced concurrency patterns.</p>
       <a href="module4.html" class="btn lesson-btn">Go to Module 4</a>
     </div>
 
     <div class="course-module glass">
       <h3>Module 5: Memory Management & Debugging</h3>
-      <p>Manual vs. smart pointers, custom allocators, valgrind, GDB.</p>
+      <p>Manual vs. smart pointers, custom allocators, valgrind, GDB usage.</p>
       <a href="module5.html" class="btn lesson-btn">Go to Module 5</a>
     </div>
 
     <div class="course-module glass">
       <h3>Module 6: Templates & Metaprogramming</h3>
-      <p>SFINAE, type traits, advanced compile-time programming.</p>
+      <p>SFINAE, type traits, advanced compile-time programming tricks.</p>
       <a href="module6.html" class="btn lesson-btn">Go to Module 6</a>
     </div>
 
     <div class="course-module glass">
       <h3>Module 7: System Design & Advanced Topics</h3>
-      <p>Design patterns, architecture, interview scenarios in C++.</p>
+      <p>Design patterns, high-level architecture, common interview scenarios.</p>
       <a href="module7.html" class="btn lesson-btn">Go to Module 7</a>
     </div>
-
   </main>
 
   <footer>
-    <p>© 2025 CodeForge++. All rights reserved.</p>
+    <p>© 2025 CodeForge++. Developer & Owner: Ohad Alon. All rights reserved.</p>
   </footer>
 
   <script src="scripts/main.js"></script>
