--- a/ide.html
+++ b/ide.html
@@ -33,43 +33,54 @@
   </header>
 
   <main class="page-content fade-in">
-    <!-- Sub-Nav / Breadcrumb (Lesson ID might not map perfectly to module page, but we show a generic approach) -->
+    <!-- Breadcrumb for navigation -->
     <div class="breadcrumb" id="breadcrumb-nav">
       <a href="index.html">Home</a> <span>></span>
       <a href="exercises.html">Exercises</a> <span>></span>
-      <!-- We'll auto-fill module link based on code in JS if you like. For now, let's just do a placeholder. -->
-      <a href="module1.html" id="moduleLink">Module 1</a> <span>></span>
+      <a href="#" id="moduleLink">Module X</a> <span>></span>
       <span>IDE</span>
     </div>
 
-    <section class="glass">
-      <h2 id="ide-lesson-title" style="margin-bottom:10px;">IDE for Lesson: ...</h2>
+    <section class="glass" style="padding:30px;">
+      <h2 id="ide-lesson-title" style="margin-bottom:15px;">IDE for Lesson: ...</h2>
       <div id="code-editor"></div>
       <div style="margin-top:20px;">
         <button class="btn" id="run-code-btn">Run Code</button>
         <button class="btn" id="check-solution-btn">Check Solution</button>
       </div>
-      <div id="output-area" class="glass" style="margin-top:20px; padding:10px; min-height:100px; white-space:pre-wrap;"></div>
+      <div id="output-area" class="glass" style="
+        margin-top:20px;
+        padding:10px;
+        min-height:100px;
+        white-space:pre-wrap;
+        background:rgba(255,255,255,0.05);
+      "></div>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 CodeForge++. All rights reserved.</p>
+    <p>© 2025 CodeForge++. Developer & Owner: Ohad Alon. All rights reserved.</p>
   </footer>
 
   <script src="scripts/main.js"></script>
   <script src="scripts/ide.js"></script>
+  <script src="scripts/progress.js"></script> 
+  <!-- ensure progress.js is loaded so we can call markLessonCompleted() -->
   <script>
-    // Optionally, you could parse the lessonID => figure out which module it belongs to
-    // e.g., if it starts with M1 -> link module1.html, if M2 -> link module2.html, etc.
-    const queryParams = new URLSearchParams(window.location.search);
-    const lesson = queryParams.get('lessonID') || 'M1L1';
-    let modNum = lesson.slice(1,2); // e.g. M1 -> '1'
+    // Parse lessonID
+    const params = new URLSearchParams(window.location.search);
+    const lesson = params.get('lessonID') || 'M1L1';
+
+    // For breadcrumb
+    const moduleNum = lesson.slice(1,2); // e.g. M3 => '3'
     const moduleLink = document.getElementById('moduleLink');
     if (moduleLink) {
-      moduleLink.href = `module${modNum}.html`;
-      moduleLink.innerText = `Module ${modNum}`;
+      moduleLink.href = `module${moduleNum}.html`;
+      moduleLink.innerText = `Module ${moduleNum}`;
     }
+    // Also update title
+    const ideTitle = document.getElementById('ide-lesson-title');
+    ideTitle.innerText = `IDE for Lesson: ${lesson}`;
   </script>
 </body>
 </html>
