--- a/module3.html
+++ b/module3.html
@@ -32,55 +32,59 @@
   </header>
 
   <main class="page-content fade-in">
-    <section class="glass">
-      <h2>Module 3: Real-Time & Embedded</h2>
-      <p>
-        Explores RTOS concepts, concurrency in embedded contexts, interrupts, hardware-level debugging, etc.
+    <div class="breadcrumb">
+      <a href="index.html">Home</a> <span>></span>
+      <a href="exercises.html">Exercises</a> <span>></span>
+      <span>Module 3</span>
+    </div>
+
+    <section class="glass module-lessons">
+      <h2 style="color:#fff; margin-bottom:10px;">Module 3: Real-Time & Embedded</h2>
+      <p style="margin-bottom:20px;">
+        Delve into RTOS basics, embedded concurrency, interrupt handling, and hardware-level debugging strategies.
       </p>
 
-      <hr/>
+      <hr style="border-color:rgba(255,255,255,0.2); margin:20px 0;"/>
 
       <h3>Lesson 1: RTOS & Task Scheduling</h3>
       <p>
-        Understand how real-time schedulers prioritize tasks, manage deadlines, and handle context switching.
-        <strong>Tasks:</strong>
-        <ul>
-          <li>Write pseudocode for a priority-based scheduler.</li>
-          <li>Explain rate-monotonic scheduling vs. earliest-deadline-first.</li>
-        </ul>
+        Understand priority-based scheduling, rate-monotonic vs. earliest deadline first, and how tasks switch in RTOS.
       </p>
+      <ul style="margin-left:20px;">
+        <li>Write pseudocode for a simple round-robin scheduler vs. a priority-based scheduler.</li>
+        <li>Discuss how interrupts interact with task scheduling in real-time constraints.</li>
+      </ul>
       <button class="btn" onclick="openIDE('M3L1')">Open IDE for Lesson 1</button>
 
-      <hr/>
+      <hr style="border-color:rgba(255,255,255,0.2); margin:20px 20px;"/>
 
-      <h3>Lesson 2: ISRs & Concurrency in Embedded</h3>
+      <h3>Lesson 2: ISRs & Concurrency</h3>
       <p>
-        Handling interrupts safely, shared data with volatile, and concurrency pitfalls in microcontrollers.
-        <strong>Tasks:</strong>
-        <ul>
-          <li>Write an ISR that toggles an LED and increments a counter.</li>
-          <li>Demonstrate lock-free data exchange between main loop and ISR.</li>
-        </ul>
+        In embedded contexts, concurrency often revolves around interrupts. Learn how to safely share data 
+        between main tasks and ISRs without corrupting state.
       </p>
+      <ul style="margin-left:20px;">
+        <li>Implement an ISR that updates a global counter; use <code>volatile</code> to avoid compiler optimizations.</li>
+        <li>Discuss disabling interrupts briefly vs. using lock-free structures.</li>
+      </ul>
       <button class="btn" onclick="openIDE('M3L2')">Open IDE for Lesson 2</button>
 
-      <hr/>
+      <hr style="border-color:rgba(255,255,255,0.2); margin:20px 20px;"/>
 
       <h3>Lesson 3: Hardware Interaction & Debugging</h3>
       <p>
-        Using GPIO, SPI, or I2C in embedded code. Approaches to low-level debugging with JTAG or logic analyzers.
-        <strong>Tasks:</strong>
-        <ul>
-          <li>Simulate reading/writing a hardware register with a <code>volatile</code> pointer.</li>
-          <li>Describe how you’d debug a bus fault with a logic analyzer trace.</li>
-        </ul>
+        Explore memory-mapped I/O, controlling peripherals (GPIO, SPI, I2C), and debugging with tools like JTAG or logic analyzers.
       </p>
+      <ul style="margin-left:20px;">
+        <li>Simulate reading/writing from a memory-mapped peripheral address using a <code>volatile</code> pointer.</li>
+        <li>Describe how you'd trace a communication error with a logic analyzer.</li>
+      </ul>
       <button class="btn" onclick="openIDE('M3L3')">Open IDE for Lesson 3</button>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 CodeForge++. All rights reserved.</p>
+    <p>© 2025 CodeForge++. Developer & Owner: Ohad Alon. All rights reserved.</p>
   </footer>
 
   <script src="scripts/main.js"></script>
