refactor progress and exercises pages, enhance quiz section with timer and leaderboard, and improve animations and styles

--- a/exercises.html
+++ b/exercises.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="styles/animations.css" />
 </head>
 <body>
-  <!-- Header -->
   <header class="glass header-slide-in compact-header">
     <div class="nav-container">
       <h1 class="logo">
@@ -34,7 +33,7 @@
   <main class="page-content fade-in exercise-list">
     <h2 class="section-title" style="color:#fff; text-align:center; margin-bottom:10px;">Advanced C++ Interview Syllabus</h2>
     <p style="text-align:center; max-width:800px; margin:0 auto 30px;">
-      Select a module below to see detailed lessons and tasks. Each module page includes sub-navigation and an embedded IDE link for coding solutions.
+      Choose a module to see thorough lessons, a collapsible timeline, advanced tasks, and integrated media.
     </p>
 
     <div class="course-module glass">
