--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CodeForge++ | Home</title>
   <link rel="stylesheet" href="styles/enhanced_styles.css" />
   <link rel="stylesheet" href="styles/animations.css" />
@@ -15,7 +15,6 @@
         <span class="logo-text">CodeForge++</span>
         <span class="logo-icon">{<></>}</span>
       </h1>
-      <!-- Hamburger -->
       <div class="menu-toggle" id="menuToggle">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -27,7 +26,6 @@
           <li><a href="progress.html" class="nav-link">Progress</a></li>
           <li><a href="resources.html" class="nav-link">Resources</a></li>
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-          <!-- Resume link REMOVED -->
         </ul>
       </nav>
     </div>
@@ -36,15 +34,15 @@
   <!-- Hero Section -->
   <section class="index-hero glass fade-in">
     <h1 class="hero-title">Elevate Your C++ Skills</h1>
-    <p class="scale-up">
-      A comprehensive, interview-focused platform with advanced modules, an embedded IDE,
-      and real-time progress tracking.
+    <p class="slide-up">
+      A comprehensive, interview-focused platform with advanced modules,
+      an embedded IDE, real-time progress tracking, plus brand-new animations!
     </p>
     <a href="exercises.html" class="btn btn-glow">Get Started</a>
   </section>
 
   <!-- Featured Highlights -->
-  <section class="features">
+  <section class="features slide-up">
     <div class="feature-card glass card-hover floating-card">
       <h3>Robust Syllabus</h3>
       <p>Learn advanced C++: concurrency, embedded, memory management, and more.</p>
@@ -55,19 +53,19 @@
     </div>
     <div class="feature-card glass card-hover floating-card">
       <h3>Progress & Quizzes</h3>
-      <p>Track achievements, tackle quizzes, and receive instant feedback.</p>
+      <p>Track achievements, timed quizzes, local leaderboard, and instant feedback.</p>
     </div>
   </section>
 
   <!-- Call-to-Action -->
   <section class="cta glass fade-in">
     <h2>Prepare for Your Next Interview</h2>
-    <a href="exercises.html" class="btn btn-glow">Explore Modules</a>
+    <a href="exercises.html" class="btn">Explore Modules</a>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 CodeForge++. All rights reserved.</p>
+    <p>© 2025 CodeForge++. Developer & Owner: Ohad Alon. All rights reserved.</p>
   </footer>
 
   <!-- Scripts -->
