--- a/progress.html
+++ b/progress.html
@@ -33,9 +33,8 @@
   <main class="page-content fade-in">
     <section class="glass" style="max-width:600px; margin:0 auto; text-align:center;">
       <h2 style="color:#fff;">Your Learning Journey</h2>
-      <p>Track your completed lessons and watch the radial progress ring fill up!</p>
+      <p>Track your completed lessons. The radial ring fills up as you progress.</p>
 
-      <!-- The radial progress display -->
       <div class="progress-radial" id="radialProgress" style="--percent:0;">
         <span id="progress-label">0%</span>
       </div>
